<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:defaultValue="@string/preference_standort_default"
        android:inputType="text"
        android:key="@string/preference_standort_key"
        android:singleLine="true"
        android:title="@string/preference_standort_title" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/preference_kurzvorhersage_key"
        android:summary="@string/preference_kurzvorhersage_summary"
        android:title="@string/preference_kurzvorhersage_title" />

    <EditTextPreference
        android:defaultValue="@string/preference_benutzername_default"
        android:inputType="text"
        android:key="@string/preference_benutzername_key"
        android:singleLine="true"
        android:title="@string/preference_benutzername_title" />

    <EditTextPreference
        android:defaultValue="@string/preference_benutzername_default"
        android:inputType="text"
        android:key="@string/preference_passwort_key"
        android:singleLine="true"
        android:title="@string/preference_passwort_title" />

</PreferenceScreen>